# fb2k-qobuz-plus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_J.md  renovate.json  toolchain-clang-msvc-x86.cmake  toolchain-clang-msvc.cmake  toolchain-mingw64.cmake
.github/workflows/: build-linux-cross.yml  build-windows-msvc.yml
cmake/: package_component.cmake
compat-include/: MMReg.h  Objbase.h  SDKDDKVer.h  ShlObj.h  Shlwapi.h  WinSock2.h
compat-include-msvc/: MMReg.h  Objbase.h  SDKDDKVer.h  ShlObj.h  Shlwapi.h  pfc_win_extras.h
src/: foo_qobuz.rc  main.cpp  qobuz_api.cpp  qobuz_api.h  qobuz_bundle.cpp  qobuz_bundle.h  qobuz_filesystem.cpp  qobuz_input.cpp  qobuz_playlist_loader.cpp  qobuz_prefs.cpp  qobuz_search.cpp  resource.h  stdafx.h
