cmake_minimum_required(VERSION 3.16)
project(foo_qobuz CXX RC)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ---- Architecture detection ----------------------------------------------
# CMAKE_SYSTEM_PROCESSOR is set by the toolchain file (x86_64 or x86).
# On a native Windows MSVC build, fall back to CMAKE_VS_PLATFORM_NAME or MSVC_CXX_ARCHITECTURE_ID.
if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(i[3-6]86|x86)$" OR
   CMAKE_VS_PLATFORM_NAME STREQUAL "Win32" OR
   MSVC_CXX_ARCHITECTURE_ID STREQUAL "X86")
    set(TARGET_ARCH_X86 TRUE)
else()
    set(TARGET_ARCH_X86 FALSE)
endif()

# ---- Compile definitions -------------------------------------------------
add_compile_definitions(
    WIN32
    _WIN32
    _WIN32_WINNT=0x0600
    WINVER=0x0600
    # WIN32_LEAN_AND_MEAN intentionally omitted: fb2k SDK uses COM `interface` keyword
    # which requires objbase.h pulled in via the full windows.h
    NOMINMAX
    UNICODE
    _UNICODE
    FOOBAR2000_HAVE_CFG_VAR_LEGACY=1
    FOOBAR2000_TARGET_VERSION=82
    _CRT_SECURE_NO_WARNINGS
    _CRT_NONSTDC_NO_WARNINGS
)
if(NOT TARGET_ARCH_X86)
    add_compile_definitions(WIN64 _WIN64)
endif()

# ---- Compiler detection --------------------------------------------------
# IS_MSVC_LIKE: native MSVC *or* clang-cl (both use MSVC ABI / flags)
if(MSVC)
    set(IS_MSVC_LIKE TRUE)
endif()
# IS_CLANG_CL: specifically clang-cl (supports extra -W flags that MSVC ignores)
if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC")
    set(IS_CLANG_CL TRUE)
endif()

# ---- foobar2000 SDK ------------------------------------------------------
# Options:
#   FB2K_SDK_DIR      - Path to an already-extracted SDK (skips download).
#   FB2K_SDK_VERSION  - Version date string (e.g. "2025-03-07") or "latest".
#                       Ignored when FB2K_SDK_DIR is set. Default: "latest".
#
# Downloaded SDKs are cached under <source-root>/.deps/fb2k-sdk/ so they
# survive build-directory deletion. .deps/ is excluded via .gitignore.
set(FB2K_SDK_DIR "" CACHE PATH
    "Path to an existing foobar2000 SDK directory (skips auto-download)")
set(FB2K_SDK_VERSION "latest" CACHE STRING
    "foobar2000 SDK version to download: date string (YYYY-MM-DD) or \"latest\"")

if(FB2K_SDK_DIR AND EXISTS "${FB2K_SDK_DIR}/pfc")
    set(SDK_DIR "${FB2K_SDK_DIR}")
    message(STATUS "foobar2000 SDK: using user-provided ${SDK_DIR}")
else()
    set(_FB2K_DEPS_DIR "${CMAKE_SOURCE_DIR}/.deps/fb2k-sdk")

    # Resolve "latest" by scraping the SDK download page.
    if(FB2K_SDK_VERSION STREQUAL "latest")
        set(_FB2K_SDK_PAGE "${_FB2K_DEPS_DIR}/_sdk_page.html")
        file(DOWNLOAD "https://www.foobar2000.org/SDK" "${_FB2K_SDK_PAGE}"
            TIMEOUT 30 STATUS _dl_status)
        list(GET _dl_status 0 _dl_code)
        if(NOT _dl_code EQUAL 0)
            message(FATAL_ERROR "Could not fetch foobar2000 SDK page: ${_dl_status}")
        endif()
        file(READ "${_FB2K_SDK_PAGE}" _sdk_page_content)
        string(REGEX MATCH "SDK-([0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9])\\.7z" _ "${_sdk_page_content}")
        if(NOT CMAKE_MATCH_1)
            message(FATAL_ERROR "Could not parse latest foobar2000 SDK version from download page")
        endif()
        set(_resolved_version "${CMAKE_MATCH_1}")
    else()
        set(_resolved_version "${FB2K_SDK_VERSION}")
    endif()

    set(_FB2K_SDK_EXTRACT_DIR "${_FB2K_DEPS_DIR}/SDK-${_resolved_version}")

    if(NOT EXISTS "${_FB2K_SDK_EXTRACT_DIR}/pfc")
        set(_sdk_url "https://www.foobar2000.org/downloads/SDK-${_resolved_version}.7z")
        set(_sdk_archive "${_FB2K_DEPS_DIR}/SDK-${_resolved_version}.7z")
        message(STATUS "Downloading foobar2000 SDK ${_resolved_version} from ${_sdk_url} ...")
        file(MAKE_DIRECTORY "${_FB2K_SDK_EXTRACT_DIR}")
        file(DOWNLOAD "${_sdk_url}" "${_sdk_archive}"
            SHOW_PROGRESS TIMEOUT 120 STATUS _dl_status)
        list(GET _dl_status 0 _dl_code)
        if(NOT _dl_code EQUAL 0)
            file(REMOVE_RECURSE "${_FB2K_SDK_EXTRACT_DIR}")
            message(FATAL_ERROR "Failed to download foobar2000 SDK: ${_dl_status}")
        endif()
        execute_process(
            COMMAND "${CMAKE_COMMAND}" -E tar xf "${_sdk_archive}"
            WORKING_DIRECTORY "${_FB2K_SDK_EXTRACT_DIR}"
            RESULT_VARIABLE _extract_result
        )
        if(NOT _extract_result EQUAL 0)
            file(REMOVE_RECURSE "${_FB2K_SDK_EXTRACT_DIR}")
            message(FATAL_ERROR "Failed to extract foobar2000 SDK archive (exit ${_extract_result})")
        endif()
        file(REMOVE "${_sdk_archive}")
    endif()

    if(NOT EXISTS "${_FB2K_SDK_EXTRACT_DIR}/pfc")
        message(FATAL_ERROR "Unexpected SDK layout after extraction in ${_FB2K_SDK_EXTRACT_DIR}")
    endif()

    set(SDK_DIR "${_FB2K_SDK_EXTRACT_DIR}")
    message(STATUS "foobar2000 SDK: ${_resolved_version} at ${SDK_DIR}")
endif()

# pfc sources (all compile safely under _WIN32)
# pfc-fb2k-hooks.cpp provides stub crash/error hooks for standalone use;
# when building a fb2k component, foobar2000/SDK/utility.cpp already provides
# them — include both causes duplicate symbol errors at link time.
file(GLOB SDK_PFC_SRCS  "${SDK_DIR}/pfc/*.cpp")
list(FILTER SDK_PFC_SRCS EXCLUDE REGEX ".*pfc-fb2k-hooks\\.cpp$")

# fb2k SDK sources (exclude Apple .mm files)
file(GLOB SDK_FB2K_ALL  "${SDK_DIR}/foobar2000/SDK/*.cpp")
list(FILTER SDK_FB2K_ALL EXCLUDE REGEX ".*\\.mm$")

set(SDK_CLIENT_SRC
    "${SDK_DIR}/foobar2000/foobar2000_component_client/component_client.cpp")

# ---- Plugin sources ------------------------------------------------------
set(PLUGIN_SRCS
    src/main.cpp
    src/qobuz_api.cpp
    src/qobuz_bundle.cpp
    src/qobuz_input.cpp
    src/qobuz_prefs.cpp
    src/qobuz_search.cpp
    src/foo_qobuz.rc
)

add_library(foo_qobuz SHARED
    ${SDK_PFC_SRCS}
    ${SDK_FB2K_ALL}
    ${SDK_CLIENT_SRC}
    ${PLUGIN_SRCS}
)

# ---- Include directories -------------------------------------------------
# On Linux cross-compile the file-system is case-sensitive; case-shim dirs with
# symlinks to Windows SDK headers are added via /imsvc in the toolchain file.
# On native Windows the FS is case-insensitive so no shims are needed here.
target_include_directories(foo_qobuz PRIVATE
    ${SDK_DIR}                          # for <pfc/...>
    ${SDK_DIR}/foobar2000               # for <SDK/...> and <helpers/...>
    ${CMAKE_SOURCE_DIR}/src             # for resource.h, stdafx.h
    ${CMAKE_SOURCE_DIR}/third_party     # for <nlohmann/json.hpp>
)

# ---- Compiler flags ------------------------------------------------------
if(IS_MSVC_LIKE)
    target_compile_options(foo_qobuz PRIVATE /O2 /W1 /wd4996)
    if(IS_CLANG_CL)
        # clang-cl accepts GCC-style warning suppression flags; native MSVC does not
        target_compile_options(foo_qobuz PRIVATE
            -Wno-ignored-pragma-intrinsic
            -Wno-unknown-pragmas
            -Wno-unused-parameter
            -Wno-microsoft-cast
        )
    endif()
else()
    # MinGW / GCC cross-compile
    target_compile_options(foo_qobuz PRIVATE
        -O2
        -Wall
        -Wno-unknown-pragmas
        -Wno-unused-parameter
        -Wno-missing-field-initializers
        -Wno-register
    )
endif()

# ---- Per-file flags (audio_math.cpp uses AVX/SSE intrinsics) -------------
if(IS_MSVC_LIKE)
    set_source_files_properties(${SDK_DIR}/pfc/audio_math.cpp PROPERTIES
        COMPILE_FLAGS "/arch:AVX")
else()
    if(TARGET_ARCH_X86)
        set_source_files_properties(${SDK_DIR}/pfc/audio_math.cpp PROPERTIES
            COMPILE_FLAGS "-mavx -msse4.1 -mssse3 -msse2")
    else()
        set_source_files_properties(${SDK_DIR}/pfc/audio_math.cpp PROPERTIES
            COMPILE_FLAGS "-mavx -msse4.1 -mssse3")
    endif()
endif()

# ---- Link libraries ------------------------------------------------------
if(IS_MSVC_LIKE)
    if(TARGET_ARCH_X86)
        set(_FB2K_SHARED_LIB "${SDK_DIR}/foobar2000/shared/shared-Win32.lib")
    else()
        set(_FB2K_SHARED_LIB "${SDK_DIR}/foobar2000/shared/shared-x64.lib")
    endif()
    target_link_libraries(foo_qobuz PRIVATE
        wininet.lib winhttp.lib comctl32.lib comdlg32.lib shell32.lib ole32.lib
        uuid.lib shlwapi.lib winmm.lib
        # shared.dll import library — provides SHARED_EXPORT functions (uCharLower, etc.)
        "${_FB2K_SHARED_LIB}"
    )
    target_link_options(foo_qobuz PRIVATE /DLL)
else()
    target_link_libraries(foo_qobuz PRIVATE
        wininet comctl32 comdlg32 shell32 ole32 uuid shlwapi winmm
    )
    target_link_options(foo_qobuz PRIVATE
        -static-libgcc -static-libstdc++ -static -lwinpthread
    )
endif()

# Output name must match VALIDATE_COMPONENT_FILENAME
set_target_properties(foo_qobuz PROPERTIES
    OUTPUT_NAME "foo_qobuz"
    PREFIX      ""
    SUFFIX      ".dll"
)
